hw-7-without-img

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
 
   <body>
@@ -42,20 +43,138 @@
             </li>
           </ul>
         </nav>
+        <button class="mobile-nav-menu-button js-open-menu">
+          <svg class="mobile-menu-icon" width="32" heigth="22">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
         <address class="contact-info">
           <ul class="list contact-list">
-            <li>
+            <li class="contact-list-item">
               <a href="mailto:info@devstudio.com" class="contact-item link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="contact-list-item">
               <a href="tel:+110001111111" class="contact-item link"
                 >+11 (000) 111-11-11</a
               >
             </li>
           </ul>
         </address>
+        <!-- MOBILE MENU  -->
+        <div class="mobile-menu js-menu-container">
+          <div class="mobile-menu-container">
+            <button class="mobile-menu-close-button js-close-menu">
+              <svg class="moble-menu-close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </button>
+            <ul class="list mobile-menu-nav">
+              <li class="mobile-menu-nav-item">
+                <a
+                  href="./index.html"
+                  class="mobile-menu-nav-link link current-page"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-menu-nav-item">
+                <a href="./portfolio.html" class="mobile-menu-nav-link link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="mobile-menu-nav-item">
+                <a href="" class="mobile-menu-nav-link link">Contacts</a>
+              </li>
+            </ul>
+            <div>
+              <address class="mobile-menu-contact-info">
+                <ul class="list mobile-menu-contact-list">
+                  <li class="mobile-menu-contact-item">
+                    <a
+                      href="tel:+110001111111"
+                      class="mobile-menu-contact-phone link"
+                      >+11 (000) 111-11-11</a
+                    >
+                  </li>
+                  <li class="mobile-menu-contact-item">
+                    <a
+                      href="mailto:info@devstudio.com"
+                      class="mobile-menu-contact-email link"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+              </address>
+              <ul class="mobile-menu-social-media-list list">
+                <li class="mobile-menu-social-media-item">
+                  <a
+                    href=""
+                    class="mobile-menu-social-media-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg
+                      class="mobile-social-media-icon"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-menu-social-media-item">
+                  <a
+                    href=""
+                    class="mobile-menu-social-media-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg
+                      class="mobile-social-media-icon"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-menu-social-media-item">
+                  <a
+                    href=""
+                    class="mobile-menu-social-media-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg
+                      class="mobile-social-media-icon"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-menu-social-media-item">
+                  <a
+                    href=""
+                    class="mobile-menu-social-media-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <svg
+                      class="mobile-social-media-icon"
+                      width="24"
+                      height="24"
+                    >
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -124,7 +243,7 @@
           </ul>
         </div>
       </section>
-      <!-- SERVICES -->
+      <!-- WHAT ARE WE DOING -->
       <section class="services section">
         <div class="container">
           <h2 class="services-title section-title">What are we doing</h2>
@@ -155,7 +274,7 @@
       </section>
       <!-- OUR TEAM  -->
       <section class="our-team section">
-        <div class="container">
+        <div class="container our-team-container">
           <h2 class="our-team-title section-title">Our Team</h2>
           <ul class="list our-team-list">
             <li class="member-card">
@@ -212,7 +331,7 @@
                       rel="noreferrer noopener"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -273,7 +392,7 @@
                       rel="noreferrer noopener"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -334,7 +453,7 @@
                       rel="noreferrer noopener"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -395,7 +514,7 @@
                       rel="noreferrer noopener"
                     >
                       <svg class="social-media-icon" width="16" height="16">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -408,7 +527,7 @@
 
       <!-- CUSTOMERS  -->
       <section class="customers section">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="section-title customers-section-title">Customers</h2>
           <ul class="list cutomers-list">
             <li class="cutomer-list-card">
@@ -546,7 +665,7 @@
                 rel="noreferrer noopener"
               >
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -667,5 +786,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
