--- a/portfolio.html
+++ b/portfolio.html
@@ -330,7 +330,7 @@
                 rel="noreferrer noopener"
               >
                 <svg class="social-media-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
