--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
           <ul class="list services-list">
             <li class="services-item">
               <img
+                srcset="./images/services/computer-2x.jpg 2x"
                 src="./images/services/computer.jpg"
                 alt="Computer monitor"
                 width="360"
@@ -257,6 +258,7 @@
             </li>
             <li class="services-item">
               <img
+                srcset="./images/services/apps-2x.jpg 2x"
                 src="./images/services/apps.jpg"
                 alt="Phone apps"
                 width="360"
@@ -264,6 +266,7 @@
             </li>
             <li class="services-item">
               <img
+                srcset="./images/services/phone-2x.jpg 2x"
                 src="./images/services/phone.jpg"
                 alt="Someone hold the phone"
                 width="360"
@@ -279,6 +282,7 @@
           <ul class="list our-team-list">
             <li class="member-card">
               <img
+                srcset="./images/our-team/mark-guerrero-2x.jpg 2x"
                 src="./images/our-team/mark-guerrero.jpg"
                 alt="Team member Mark Guerrero"
                 width="264"
@@ -340,6 +344,7 @@
             </li>
             <li class="member-card">
               <img
+                srcset="./images/our-team/tom-ford-2x.jpg 2x"
                 src="./images/our-team/tom-ford.jpg"
                 alt="Team member Tom Ford"
                 width="264"
@@ -401,6 +406,7 @@
             </li>
             <li class="member-card">
               <img
+                srcset="./images/our-team/camila-garcia-2x.jpg 2x"
                 src="./images/our-team/camila-garcia.jpg"
                 alt="Team member Camila Garcia"
                 width="264"
@@ -462,6 +468,7 @@
             </li>
             <li class="member-card">
               <img
+                srcset="./images/our-team/daniel-wilson-2x.jpg 2x"
                 src="./images/our-team/daniel-wilson.jpg"
                 alt="Team member Daniel Wilson"
                 width="264"
